fixed alignment of the pages

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,7 @@
 body {
     padding: 10px 20px;
     background-color: rgb(249, 234, 215);
+    text-align: left;
 }
 img {
     /* padding: 20px;
@@ -11,7 +12,7 @@ img {
     padding-right: 0px;
 }
 h1 {    
- padding: 10px 20px; 
+    padding: 0px; 
 }
 
 .button {
@@ -62,3 +63,9 @@ th, td {
 a {
     text-decoration: none;
 }
+
+.content-container {
+    margin: 0 auto;  /* Center the container on the page */
+    text-align: left; /* Ensure text alignment is left within the container */
+  }
+  
